--- a/style.css
+++ b/style.css
@@ -14,28 +14,30 @@ body{
     background: linear-gradient(180deg,orange,rgb(249,70,100),rgb(244,43,244));
     transition: all 0.3s;
     transform-style: preserve-3d;  
-    
+    border-radius: 20px;
 }
 
 .child-card{
    
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.776);
     transition: all 0.3s;
     object-fit: cover;
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
     
 }
 .card:hover{
 
     border-radius: 20px;
-    box-shadow: 0px 0px 180px #18dde9;
+    box-shadow: 0px 0px 50px #18dde9;
     
 
 }
 .card:hover .child-card{
     
-    scale: 0.99;
+    scale: 0.98;
     border-radius: 20px;
     
 }
@@ -73,7 +75,8 @@ body{
     font-size: smaller;
     padding-top: 2px;
     padding-bottom: 4px;
-    margin-left: 68px;
+    margin-left: 60px;
+    padding-right: 28px;
     background-color: rgba(255, 255, 255, 0.683);
     box-shadow: 0 5px 10px rgb(15, 1, 1);
     border-radius: 12px;
@@ -88,10 +91,11 @@ body{
     flex-direction: column;
     align-items: center;
     margin-bottom: 16px;
-    margin-left: 68px;
+    margin-left: 60px;
     font-size: smaller;
     padding-top: 4px;
     padding-bottom: 4px;
+    padding-right: 28px;
     margin-top: 16px;
     background-color: rgba(255, 255, 255, 0.683);
     box-shadow: 0 5px 10px rgb(15, 1, 1);
@@ -115,20 +119,9 @@ body{
     padding-left:50 ;
     padding-right: 90;
     margin-left: 86px;
+    cursor: pointer;
     }
-    .button .signin{
-    opacity: 0.6;
-    background-color: beige;
-    width: 56px;
-    height: 26px;
-    border-radius: 16px;
-    border: none;
-    box-shadow: 0 5px 10px rgb(15, 1, 1);
-    margin-right: 16px;
-    margin-top: 26px;
-    margin-bottom: 20px;
-    padding-left: 59px;
-    }
+
     .id .forgot{
         margin-left: 190;
         color:white;
@@ -148,6 +141,7 @@ body{
         margin-right: 6px;
         border-radius: 12px;
         margin-bottom: 22px;
+       
     }
     .image1{
         background: white;
