--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ body{
 
     border-radius: 20px;
     box-shadow: 0px 0px 50px #18dde9;
-    
+    text-shadow: 2px 2px black;
 
 }
 .card:hover .child-card{
-    
+    background-color: rgba(0, 0, 0, 0.653);
     scale: 0.98;
     border-radius: 20px;
-    
+    text-shadow: 2px 4px black;
 }
 .child-card .name {
     display: flex;
@@ -48,6 +48,7 @@ body{
     padding-top: 30px;
     font-size: large;
     color:white;
+    
 }
 .child-card .id .user{
     display: flex;
@@ -56,7 +57,7 @@ body{
     font-size: 14px;
     margin-top: 40px;
     color: white;
-
+    
 }
 .child-card .id .pass{
     display: flex;
@@ -65,6 +66,7 @@ body{
     font-size: 14px;
     padding-top: 12px;
     color: white;
+    
 
 }
 .child-card .id .email{
@@ -141,6 +143,7 @@ body{
         margin-right: 6px;
         border-radius: 12px;
         margin-bottom: 22px;
+        box-shadow: 0 5px 10px rgb(15, 1, 1);
        
     }
     .image1{
